recursion.logo.square.FourSquare.scala.error
Compilation error:
FourSquare:3: error: not found: value foward
    foward (100)
    ^FourSquare:4: error: overloaded method value left with alternatives:
  (x$1: Int)Unit <and>
  (x$1: Double)Unit
 cannot be applied to ()
    left()
    ^